Replace GardensSideBar with NavBar in FriendsController